[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hatchy"
version = "0.5.1"
description = "Command line tools for working with the colcon meta-buildsystem and colcon workspaces."
readme = "README.md"
requires-python = ">=3.6"
license = "BSD-3-Clause"
authors = [
    {name = "Marc Alban", email = "marcalban@hatchbed.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "PyYAML",
    "lxml",
    "colcon-common-extensions",
]

[project.urls]
Homepage = "https://github.com/hatchbed/hatchy"

[project.scripts]
hatchy = "hatchy.main:main"

[tool.setuptools.packages.find]
where = ["."]
